--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
+DB_CONECTION_STRING = mysql:host=127.0.0.1;dbname=cake_data
 DB_HOST = localhost
 DB_PORT = 80
 DB_USER = root
 DB_PASSWORD =
-DB_NAME = cake_data
